Displayed first data from database! Fixed questions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="select_level">Select difficulty level</string>
     <string name="correct_answer">Correct!</string>
     <string name="incorrect_answer">Unfortunately, the correct answer is: </string>
+    <string name="next_button">Next</string>
 </resources>
