Test result almost done.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,7 @@
     <string name="correct_answer">Correct!</string>
     <string name="incorrect_answer">Unfortunately, the correct answer is: </string>
     <string name="next_button">Next</string>
+    <string name="overall_result">Number of correct answers:</string>
+    <string name="result_icon_desc">icon</string>
+    <string name="your_answer">Your answer:</string>
 </resources>
