--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="overall_result">Number of correct answers:</string>
     <string name="result_icon_desc">icon</string>
     <string name="your_answer">Your answer:</string>
-    <string name="greeting">Welcome to LINQUIZ!</string>
+    <string name="greeting">Welcome to LINGUIZ!</string>
     <string name="app_desc_p1">
         The app designated to teach you Polish vocabulary in comfy way.
         Regardless of your Polish skill you will find Linguiz useful, because it covers all six language levels: from A1 up to C2.
