--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,5 @@
         Additionally, this mode does not remember if you guessed correctly meaning of certain word, but it saves your test score and enables to view it later.
     </string>
     <string name="defaultLearnLength">10</string>
+    <string name="question_skipped">Question was skipped.</string>
 </resources>
